Fix up spacing and add drop shadow to inter panel

--- a/login/ui/main.reel/main.css
+++ b/login/ui/main.reel/main.css
@@ -16,12 +16,15 @@
     -webkit-animation: Intro-fade .4s cubic-bezier(0, 0.7, 0.3, 1);
 
     background-color: hsla(0,0%,100%, 0.95);
-    padding: 1.5em;
+    padding: 3em 1.5em;
     -webkit-transition: background-color 200ms ease-in-out;
+    -webkit-box-shadow: 0 1px 3px hsla(0,0%,30%, 0.7);
+    font-size: 12px;
 }
 
 .Intro:hover {
     background-color: hsla(0,0%,100%, 1);
+
 }
 
 @-webkit-keyframes Intro-fade {
@@ -51,26 +54,26 @@
     text-align: left;
     font-weight: normal;
     color: hsl(210,12%,36%);
+    margin-top: 32px;
+    margin-bottom: 0.2em;
 }
 
 .Intro-copy {
     font-size: 14px;
     text-align: left;
+    margin-top: 0.2em;
 }
 
 .Intro-info {
-    margin: .5em 0 5em 0;
+    margin: .5em 0 63px 0;
 }
 
 .Intro-version {
     display: inline-block;
-    font-size: 14px;
     font-style: italic;
     text-align: center;
     -webkit-user-select: text;
     cursor: text;
-    padding: 0.2em 0.4em;
-    vertical-align: middle;
 }
 
 .Intro-support {
@@ -126,7 +129,7 @@
     box-shadow: inset 0 1px 0 hsla(0,0%,100%,.15), 0 1px 0 hsla(0,0%,100%,.6);
     text-decoration: none;
     text-align: left;
-    margin-top: 5em;
+    margin-top: 63px;
 }
 
 .Intro .Action-button em {
